combinedIngress/tests/fixtures/controller.yml
---
apiVersion: voyager.appscode.com/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: demo-shared-test
  annotations:
   ingress.appscode.com/annotations-service: '{"external-dns.alpha.kubernetes.io/hostname" : "echo-demo.example.org,shared-demo.example.org"}'
spec:
  tls:
  - secretName: example.org
    hosts:
    - echo-demo.example.org
    - shared-demo.example.org
  rules:
  - host: echo-demo.example.org
    http:
      paths:
      - backend:
          serviceName: echoserver.dev
          servicePort: 80
  - host: shared-demo.example.org
    http:
      paths:
      - backend:
          serviceName: hello.prod
          servicePort: 80
---
apiVersion: voyager.appscode.com/v1beta1
kind: Certificate
metadata:
  name: example.org
  namespace: demo-shared-test
spec:
  domains:
  - '*.example.org'
  acmeUserSecretName: acme-account
  challengeProvider:
    dns:
      provider: route53
